# rjw-metoffice

./: .gitignore  Cargo.toml  README.md  shanklin.json
examples/: parse-daily.rs  parse-hourly.rs  request-daily.rs  request-hourly.rs  request-three-hourly.rs
src/: daily.rs  error.rs  forecast.rs  hourly.rs  lib.rs  main.rs  parse.rs  sealed.rs  three_hourly.rs  units.rs
tests/: global-spot-hourly-sample.json  parse.rs
