[package]
name = "rjw-metoffice"
version = "0.2.0"
edition = "2024"
description = "Rust bindings to the Met Office Global Spot site-specific weather API"
repository = "https://github.com/robjwells/rjw-metoffice"
license = "MIT or Apache-2.0"

[dependencies]
jiff = { version = "0.2.15" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
url = { version = "2.5", default-features = false }

[dev-dependencies]
ureq = "3.1"
